<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/btn_del_p_st"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:drawable/ic_delete"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:id="@+id/add_token_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pan_reg_status"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_status_vle_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_token_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edt_status_vle_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/vle_id"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_check_pan_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:layout_below="@+id/input_layout_status_vle_id"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>