<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/add_token_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_token"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_token_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_token_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edt_firm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/token_qty"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_totl_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amt"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_token_quantity"
                />
            <TextView
                android:id="@+id/txt_total_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_token_quantity"
                android:text="100"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"

                />

            <Button
                android:id="@+id/btn_add_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_token"
                android:layout_below="@+id/txt_totl_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>